--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,7 @@ body {
   background-color: #111111;
   color: #ccc;
   font-family: neue-haas-grotesk-display, sans-serif;
-  transition: 0.25s ease-out;
+  transition: background 0.25s ease-out;
 }
 
 .archive-open {
